manifests/eks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  namespace: develop
  labels:
    name: giropops-senhas
spec:
  ingressClassName: nginx
  rules:
    - host: giropops-senhas.antonioazambuja.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas
                port:
                  number: 5000
